[package]
name = "rlox"
version = "0.1.0"
authors = ["Andre Zanellato <andre.zanellato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.2"
phf = { version = "0.8", features = ["macros"] }
